# MyTest321_ProgWin5

./: .gitignore  CMakeLists.txt  README.md  book refs.txt  gen_vs2022.bat  main.c  vs-chromium-project.txt
Chap01/HelloMsg/: CMakeLists.txt  HelloMsg.dep
Chap02/ScrnSize/: CMakeLists.txt  ScrnSize.c
Chap03/HelloWin/: CMakeLists.txt
Chap04/SysMets1/: CMakeLists.txt
Chap04/SysMets2/: CMakeLists.txt
Chap04/SysMets3/: CMakeLists.txt
Chap05/AltWind/: CMakeLists.txt
Chap05/Bezier/: CMakeLists.txt
Chap05/Clover/: CMakeLists.txt
Chap05/DevCaps1/: CMakeLists.txt
Chap05/LineDemo/: CMakeLists.txt
Chap05/RandRect/: CMakeLists.txt
Chap05/SineWave/: CMakeLists.txt
Chap05/WhatSize/: CMakeLists.txt
Chap06/KeyView1/: CMakeLists.txt
Chap06/KeyView2/: CMakeLists.txt
Chap06/StokFont/: CMakeLists.txt
Chap06/SysMets4/: CMakeLists.txt
Chap06/Typer/: CMakeLists.txt
Chap07/BlokOut1/: CMakeLists.txt
Chap07/BlokOut2/: CMakeLists.txt
Chap07/Checker1/: CMakeLists.txt
Chap07/Checker2/: CMakeLists.txt
Chap07/Checker3/: CMakeLists.txt
Chap07/Checker4/: CMakeLists.txt
Chap07/Connect/: CMakeLists.txt
Chap07/SysMets/: CMakeLists.txt
Chap08/Beeper1/: CMakeLists.txt
Chap08/Beeper2/: CMakeLists.txt
Chap08/Clock/: CMakeLists.txt
Chap08/DigClock/: CMakeLists.txt
Chap08/WhatClr/: CMakeLists.txt
Chap09/BtnLook/: CMakeLists.txt
Chap09/Colors1/: CMakeLists.txt
Chap09/Environ/: CMakeLists.txt
Chap09/OwnDraw/: CMakeLists.txt
Chap09/PopPad1/: CMakeLists.txt
Chap09/head/: CMakeLists.txt
Chap10/IconDemo/: CMakeLists.txt
Chap10/MenuDemo/: CMakeLists.txt
Chap10/NoPopups/: CMakeLists.txt
Chap10/PoePoem/: CMakeLists.txt
Chap10/PoorMenu/: CMakeLists.txt
Chap10/PopMenu/: CMakeLists.txt
Chap10/PopPad2/: CMakeLists.txt
Chap11/About1/: CMakeLists.txt
Chap11/About2/: CMakeLists.txt
Chap11/About3/: CMakeLists.txt
Chap11/Colors2/: CMakeLists.txt
Chap11/Colors3/: CMakeLists.txt
Chap11/HexCalc/: CMakeLists.txt
Chap11/PopPad3/: CMakeLists.txt
Chap12/ClipText/: CMakeLists.txt
Chap12/ClipView/: CMakeLists.txt
Chap13/DevCaps2/: CMakeLists.txt
Chap13/FormFeed/: CMakeLists.txt
Chap13/PopPad/: CMakeLists.txt
Chap13/Print1/: CMakeLists.txt
Chap13/Print2/: CMakeLists.txt
Chap13/Print3/: CMakeLists.txt
Chap14/BitBlt/: CMakeLists.txt
Chap14/BitMask/: CMakeLists.txt
Chap14/Blowup/: CMakeLists.txt
Chap14/Bounce/: CMakeLists.txt
Chap14/Bricks1/: CMakeLists.txt
Chap14/Bricks2/: CMakeLists.txt
Chap14/Bricks3/: CMakeLists.txt
Chap14/GrafMenu/: CMakeLists.txt
Chap14/HelloBit/: CMakeLists.txt
Chap14/Scramble/: CMakeLists.txt
Chap14/Sketch/: CMakeLists.txt
Chap14/Stretch/: CMakeLists.txt
Chap15/Apollo11/: CMakeLists.txt
Chap15/DibConv/: CMakeLists.txt
Chap15/DibHeads/: CMakeLists.txt
Chap15/DibSect/: CMakeLists.txt
Chap15/SeqDisp/: CMakeLists.txt
Chap15/ShowDib1/: CMakeLists.txt
Chap15/ShowDib2/: CMakeLists.txt
Chap16/AllColor/: CMakeLists.txt
Chap16/Bounce/: CMakeLists.txt
Chap16/Dibble/: CMakeLists.txt
Chap16/Fader/: CMakeLists.txt
Chap16/Grays1/: CMakeLists.txt
Chap16/Grays2/: CMakeLists.txt
Chap16/Grays3/: CMakeLists.txt
Chap16/Pipes/: CMakeLists.txt
Chap16/ShowDib3/: CMakeLists.txt
Chap16/ShowDib4/: CMakeLists.txt
Chap16/ShowDib5/: CMakeLists.txt
Chap16/ShowDib6/: CMakeLists.txt
Chap16/ShowDib7/: CMakeLists.txt
Chap16/ShowDib8/: CMakeLists.txt
Chap16/SysPal1/: CMakeLists.txt
Chap16/SysPal2/: CMakeLists.txt
Chap16/SysPal3/: CMakeLists.txt
Chap16/Tunnel/: CMakeLists.txt
Chap17/ChosFont/: CMakeLists.txt
Chap17/EZTest/: CMakeLists.txt
Chap17/EndJoin/: CMakeLists.txt
Chap17/FontClip/: CMakeLists.txt
Chap17/FontFill/: CMakeLists.txt
Chap17/FontOut1/: CMakeLists.txt
Chap17/FontOut2/: CMakeLists.txt
Chap17/FontRot/: CMakeLists.txt
Chap17/Justify1/: CMakeLists.txt
Chap17/Justify2/: CMakeLists.txt
Chap17/PickFont/: CMakeLists.txt
Chap17/UniChars/: CMakeLists.txt
Chap18/Emf1/: CMakeLists.txt
Chap18/Emf10/: CMakeLists.txt
Chap18/Emf11/: CMakeLists.txt
Chap18/Emf12/: CMakeLists.txt
Chap18/Emf13/: CMakeLists.txt
Chap18/Emf2/: CMakeLists.txt
Chap18/Emf3/: CMakeLists.txt
Chap18/Emf4/: CMakeLists.txt
Chap18/Emf5/: CMakeLists.txt
Chap18/Emf6/: CMakeLists.txt
Chap18/Emf7/: CMakeLists.txt
Chap18/Emf8/: CMakeLists.txt
Chap18/Emf9/: CMakeLists.txt
Chap18/EmfView/: CMakeLists.txt
Chap18/Metafile/: CMakeLists.txt
Chap19/MDIDemo/: CMakeLists.txt
Chap20/BigJob1/: CMakeLists.txt
Chap20/BigJob2/: CMakeLists.txt
Chap20/Multi1/: CMakeLists.txt
Chap20/Multi2/: CMakeLists.txt
Chap20/RndRctMT/: CMakeLists.txt
Chap21/EdrTest/: CMakeLists.txt
Chap21/ShowBit/: CMakeLists.txt
Chap21/StrProg/: CMakeLists.txt
Chap22/AddSynth/: CMakeLists.txt
Chap22/BachTocc/: CMakeLists.txt
Chap22/Drum/: CMakeLists.txt
Chap22/KBMidi/: CMakeLists.txt
Chap22/Record1/: CMakeLists.txt
Chap22/Record2/: CMakeLists.txt
Chap22/Record3/: CMakeLists.txt
Chap22/SineWave/: CMakeLists.txt
Chap22/TestMci/: CMakeLists.txt
Chap22/WakeUp/: CMakeLists.txt
Chap23/NetTime/: CMakeLists.txt
Chap23/UpdDemo/: CMakeLists.txt
